--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "date-fns": "^3.3.1",
         "lucide-react": "^0.511.0",
         "next": "13.5.8",
+        "polotno": "^2.23.5",
         "react": "^18",
         "react-day-picker": "^8.10.1",
         "react-dom": "^18",
+        "react-icons": "^5.5.0",
         "remove-accents": "^0.5.0",
         "tailwind-merge": "^3.3.0",
         "tailwindcss-animate": "^1.0.7"
