--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^3.3.1",
+        "jsdom": "^26.1.0",
         "lucide-react": "^0.511.0",
+        "markdown-it": "^14.1.0",
         "next": "13.5.8",
         "polotno": "^2.23.5",
         "react": "^18",
         "react-day-picker": "^8.10.1",
         "react-dom": "^18",
         "react-icons": "^5.5.0",
+        "react-markdown-editor-lite": "^1.3.4",
         "remove-accents": "^0.5.0",
         "tailwind-merge": "^3.3.0",
         "tailwindcss-animate": "^1.0.7"
